[package]
name = "flood_pso_viewer"
version = "0.1.0"
edition = "2021"
description = "Native GPU 3D viewer for flood_pso NBT outputs (Minecraft Structure format)"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_winit",
    "bevy_window",
    "bevy_render",
    "bevy_pbr",
    "bevy_core_pipeline",
    "bevy_ui",
    "bevy_text",
    "bevy_asset",
    "tonemapping_luts",
    "ktx2",
    "zstd",
    "x11",
    "multi_threaded",
] }
bevy_panorbit_camera = "0.21"
bevy_egui = "0.31"
fastnbt = "2.5"
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
